[package]
name = "list_comprehension_macro"
version = "0.1.0"
edition = "2021"
keywords = ["python", "comprehension", "comprehensions", "vector", "macro"]
categories = ["algorithms"]
description = "A macro for making Python like Vector and HashMap comprehensions"
homepage = "https://github.com/AharonSambol/rust_macros/tree/main/list_comprehension_macro"
repository = "https://github.com/AharonSambol/rust_macros/tree/main/list_comprehension_macro"
documentation = "https://github.com/AharonSambol/rust_macros/tree/main/list_comprehension_macro"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
